styles/styles.css
body {
  background-color: rgb(6, 3, 28);
  color: white;
  text-shadow:
    1px 1px 2px rgb(166, 0, 255),
    0 0 0.5em rgb(10, 163, 246);
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

h1 {
  font-size: min(2.25rem, 3vw) !important;
}

.underline {
  border-bottom: 5px solid rgb(2, 183, 248);
}

.media {
  height: auto;
  align-self: center;
  border-radius: 10px;
  border: 0.1rem;
  border-style: solid;
  border-color: rgb(2, 183, 248);
  margin: 1rem;
}

.media-list {
  cursor: pointer;
}

.media-list:hover {
  filter: brightness(110%);
  border-color: rgb(29, 114, 194);
  transition: border-color 0.3s ease-in-out;
  transition: border-width 0.3s ease-in-out;

  border-width: 0.3rem;
}

.github-btn {
  display: flex;
  width: 4rem;
  height: 1.2rem;
  background-color: rgb(109, 7, 241);
  margin: 0.5rem;
  border-radius: 5px;
  color: white;
  text-decoration: none;
  font-weight: bold;
  font-size: 0.9rem;
  justify-content: center;
  align-items: center;
}

.selected-element {
  border-color: rgb(109, 7, 241);
  border-width: 0.3rem;
}

@keyframes brightness-change {
  0% {
    filter: brightness(0);
  }
  50% {
    filter: brightness(0.5);
  }
  100% {
    filter: brightness(1);
  }
}

.switch-animation {
  animation: brightness-change 1s infinite;
}

@media (orientation: portrait) {
  .main-container {
    flex-direction: column-reverse !important;
  }

  .proj-list-container {
    flex-direction: row !important;
    align-items: center;
    /* justify-items: center !important; */
  }

  .proj-list-container > h1 {
    display: none;
  }

  #selected-project-container {
    align-self: center;
  }

  #main-video {
    width: 90vw;
    max-width: 90vw;
  }

  iframe {
    height: 35vh !important;
  }
}

